// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mount function Basic function 1`] = `
<div
  id="app"
>
  <div>
    
                
    <p>
      Hola a todos
    </p>
    
            
  </div>
</div>
`;

exports[`Mount function Computed function 1`] = `
<div
  id="app"
>
  <div>
    
                
    <p>
      Hola a todos 
      <span
        class="computed"
      >
        24
      </span>
    </p>
    
            
  </div>
</div>
`;

exports[`Mount function Computed w/ State function 1`] = `
<div
  id="app"
>
  <div>
    
                
    <p>
      Hola a todos 
      <span
        class="computed"
      >
        uno
      </span>
    </p>
    
            
  </div>
</div>
`;

exports[`Mount function Computed, State w/ Event function 1`] = `
<div
  id="app"
>
  <div>
    
                    
    <p
      id="unique"
    >
      Hola a todos 
      <span
        class="computed"
      >
        10
      </span>
    </p>
    
                
  </div>
</div>
`;

exports[`Mount function Computed, State w/ Event function with Render inside 1`] = `
<div
  id="app"
>
  <div>
    
                    
    <p
      id="unique"
    >
      Hola a todos 
      <span
        class="computed"
      >
        10
      </span>
    </p>
    
                    
    <div>
      <div>
        Hola
      </div>
    </div>
    
                    
    <div>
      <div>
        Esto es un componente
      </div>
    </div>
    
                
  </div>
</div>
`;

exports[`Mount function Computed, State, Memo w/ Event and Click function 1`] = `
<div
  id="app"
>
  <div>
    
                
    <p
      id="paragraph"
    >
      Hola a todos 
      <span
        class="computed"
      >
        10
      </span>
    </p>
    
                
    <div>
      <div>
        
                
        <p
          id="paragraph-1"
        >
          Hola a todos 
          <span
            class="computed"
          >
            100
          </span>
        </p>
        
            
      </div>
    </div>
    
            
  </div>
</div>
`;

exports[`Mount function Routing Functionality with Browser History 1`] = `
<div
  id="app3"
>
  <div>
     
    <span
      id="unique1"
    >
      GoTo
    </span>
     
    <span
      id="unique-back"
    >
      Everyone
    </span>
  </div>
</div>
`;

exports[`Mount function Routing Functionality with Hash History 1`] = `
<div
  id="app2"
>
  <div>
     
    <span
      id="unique1"
    >
      GoTo
    </span>
     
    <span
      id="unique-back"
    >
      Everyone
    </span>
  </div>
</div>
`;
